Fixed greedy text. Improved pane text readability
Specified a min-width for the side panels, after adding another wrapping
div. Also, used text-shadow effects to make the tiles more easily
readable. Plus something else :)

--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,18 @@ body {
   font-weight: bold;
   background-color: #999;
   margin:25px;
+  color: white;
+  text-shadow: 0px 0px 8px black;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
   transition: 0.5s;
 }
 .projectTile:hover {
   background-color: #555;
-  color: white;
+  color: black;
+  text-shadow: 0px 0px 8px white;
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 .slideBarLeft > .projectTile{
   animation: leftSlideIn 1.5s ease-out;
@@ -111,6 +118,8 @@ body {
   -webkit-animation: rightSlideIn 1.5s ease;
 }
 .showcase {
+  display: flex;
+  flex-direction: column;
   position:relative;
   animation: fadeIn 1s ease;
   -webkit-animation: fadeIn 1s ease;
@@ -138,6 +147,7 @@ body {
 }
 .sidePanel {
   flex: 1;
+  min-width:10%;
 }
 .showCasePane {
   flex: 6;
@@ -168,6 +178,7 @@ body {
 }
 .showcaseText {
   padding: 10px;
+  max-width: 70%;
 }
 .modPop {
   position: absolute;
@@ -200,6 +211,10 @@ body {
   left: 50%;
   top: 50%;
   z-index:99;
+}
+.flexRow {
+  display: flex;
+  flex-direction: row;
 }
 .hideMe {
   display: none;
